--- a/exercises/julia/parallelJulia/1.md
+++ b/exercises/julia/parallelJulia/1.md
@@ -1,5 +1,5 @@
 - First, be sure you have DataFrames installed as JuliaPackage.
-- If not, follow the steps below. You can install it in your ordinaty user space (not an environment)
+- If not, follow the steps below. You can install it in your ordinary user space (not an environment)
 
 - Open a Julia session
 
