--- a/exercises/julia/parallelJulia/1.md
+++ b/exercises/julia/parallelJulia/1.md
@@ -1,4 +1,4 @@
-- First, be sure you have DataFrames installed as JuliaPackage.
+- First, be sure you have DataFrames installed as a Julia package.
 - If not, follow the steps below. You can install it in your ordinary user space (not an environment)
 
 - Open a Julia session
