--- a/meeting_notes/20241018.md
+++ b/meeting_notes/20241018.md
@@ -26,7 +26,7 @@
         - spelling:  Rather in phase
             - Yes, change to use Issues reports instead of emails
             - [ ] [RB will make the change](https://github.com/UPPMAX/R-python-julia-matlab-HPC/issues/97)
-        - syntax: Rather in phase (domentation action)
+        - syntax: Rather in phase (documentation action)
         - links: misbehaving of github pages
             - [ ] [RB checks the link checker](https://github.com/UPPMAX/R-python-julia-matlab-HPC/issues/98)
 - Different days
@@ -53,7 +53,7 @@
         - (-15 minutes) Only remove exercise 3: export and import a virtual environment
         - (-15 minutes) Only remove exercise 2 'work with Example-gpu
             - This is needed by the session on GPUs
-            - BB can change the exercise without this exericse
+            - BB can change the exercise without this exercise
         - (-30 minutes) Remove exercises 2 and 3
             - DECIDED: R moves these to Extra
         - (-60 minutes) Remove whole section
